--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Designer</title>
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <title>HTML Template Editor</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/mode/htmlmixed/htmlmixed.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
+        #editor-container { height: 300px; background: #fff; border: 1px solid #ccc; margin: 20px auto; width: 80%; }
+        #preview { border: 1px solid #ccc; margin-top: 20px; padding: 10px; min-height: 200px; width: 80%; margin: 20px auto; }
+        button { margin: 10px; padding: 10px 20px; font-size: 16px; cursor: pointer; }
+    </style>
 </head>
 <body>
 
-    <h2>Email Designer</h2>
+    <h1>HTML Template Editor</h1>
 
-    <!-- Template Selector -->
-    <label for="templates">Choose a template:</label>
-    <select id="templates">
-        <option value="blank">Blank</option>
-        <option value="template1">Professional</option>
-        <option value="template2">Newsletter</option>
+    <label for="template-selector">📂 Select a Template:</label>
+    <select id="template-selector" onchange="loadTemplate()">
+        <option value="">Select a template</option>
     </select>
 
-    <!-- Email Design Area -->
-    <div id="editor"></div>
 
-    <button id="exportHtml">Export as HTML</button>
+    
+    <textarea id="editor-container"></textarea>
+    
 
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <button onclick="saveTemplate()">💾 Save Template</button>
+    <button onclick="renderHTML()">🔍 Render HTML</button>
+    <button onclick="exportHTML()">📥 Export HTML</button>
+
+    <h2>HTML Preview</h2>
+    <div id="preview"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
