all the edting works

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <button onclick="renderHTML()">🔍 Render HTML</button>
     <button onclick="exportHTML()">📥 Export HTML</button>
 
-    <h2>HTML Preview</h2>
+    <h2>HTML Preview down</h2>
     <div id="preview"></div>
 
     <script src="script.js"></script>
