changing the credentials

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
     <div class="templateSelector">
         <select id="template-selector" onchange="loadTemplate()">
-            <option value="">Select a template</option>
+            <option value="">Select a template to upload</option>
         </select>
 
 
