--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/theme/dracula.min.css">
 
-    <!-- Custom Styles -->
+    <!-- Custom Styles on css file  -->
     <link rel="stylesheet" href="styles.css">
 
     <!-- CodeMirror Scripts -->
