working on main project that is drageexcel and will be making chnages in the connection of mongo db

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             <div class="controls">
                 <button onclick="formatCode()">✨ Format Code</button>
                 <button onclick="saveTemplate()">💾 Save Template</button>
-                <button onclick="renderHTML()">🔍 Render HTML</button>
+                <!-- <button onclick="renderHTML()">🔍 Render HTML</button> -->
                 <button onclick="exportHTML()">📥 Export HTML</button>
             </div>
         </div>
