--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,9 @@
             <textarea id="editor-container"></textarea>
             <div class="controls">
                 <!-- <button onclick="formatCode()">✨ Format Code</button> -->
-                <button onclick="saveTemplate()">💾 Save Template</button>
+                <button onclick="saveTemplate()">💾 Save Changes</button>
                 <!-- <button onclick="renderHTML()">🔍 Render HTML</button> -->
-                <button onclick="exportHTML()">📥 Export HTML</button>
+                <button onclick="exportHTML()">Continue</button>
             </div>
         </div>
 
