working on main project that is drageexcel and removeing few unwanted part of the project 0

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             <textarea id="editor-container"></textarea>
             <div class="controls">
                 <!-- <button onclick="formatCode()">✨ Format Code</button> -->
-                <button onclick="saveTemplate()">💾 Save Changes</button>
+                <button onclick="saveTemplate()">💾 Save Template</button>
                 <!-- <button onclick="renderHTML()">🔍 Render HTML</button> -->
                 <button onclick="exportHTML()">Continue</button>
             </div>
